[gd_scene load_steps=16 format=3 uid="uid://tyafu3ahtbak"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_yr8x4"]
[ext_resource type="Texture2D" uid="uid://do4dqs14geydu" path="res://1-Bit Platformer Pack/Tilemap/monochrome_tilemap_transparent.png" id="2_f48fg"]
[ext_resource type="PackedScene" uid="uid://b4qer54qbw4f1" path="res://Scenes/HUD.tscn" id="3_spghj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dn5aj"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_uo6rx"]
atlas = ExtResource("2_f48fg")
region = Rect2(0, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndstk"]
atlas = ExtResource("2_f48fg")
region = Rect2(68, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2eur"]
atlas = ExtResource("2_f48fg")
region = Rect2(17, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f847x"]
atlas = ExtResource("2_f48fg")
region = Rect2(34, 255, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s14ru"]
atlas = ExtResource("2_f48fg")
region = Rect2(51, 255, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g10vl"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo6rx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndstk")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2eur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f847x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s14ru")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7kcpe"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vqcd"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ekpk"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abw1c"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fvyi"]
size = Vector2(13, 8)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 69
script = ExtResource("1_yr8x4")

[node name="InteractableHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableHitbox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_dn5aj")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g10vl")
animation = &"idle"
offset = Vector2(0, 1.5)

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.77, 0.77)
shape = SubResource("CircleShape2D_7kcpe")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
process_callback = 0
position_smoothing_enabled = true
drag_vertical_enabled = true

[node name="CameraTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../PlayerCamera")

[node name="HUD" parent="." instance=ExtResource("3_spghj")]

[node name="WateringCanHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="WateringCanHitbox"]
position = Vector2(10, 3)
shape = SubResource("RectangleShape2D_2vqcd")
disabled = true

[node name="WateringCanTimer" type="Timer" parent="WateringCanHitbox"]
process_callback = 0
wait_time = 0.3

[node name="MeleeHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
position = Vector2(15, 3)
shape = SubResource("RectangleShape2D_2ekpk")
disabled = true

[node name="MeleeHitboxTimer" type="Timer" parent="MeleeHitbox"]
process_callback = 0
wait_time = 0.2

[node name="DigHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="GroundPoundCollisionShape2D" type="CollisionShape2D" parent="DigHitbox"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_abw1c")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DigHitbox"]
position = Vector2(11.5, 4)
shape = SubResource("RectangleShape2D_6fvyi")
disabled = true

[node name="DigHitboxTimer" type="Timer" parent="DigHitbox"]
process_callback = 0
wait_time = 0.7

[connection signal="area_entered" from="InteractableHitbox" to="." method="_on_interactable_hitbox_area_entered"]
[connection signal="area_exited" from="InteractableHitbox" to="." method="_on_interactable_hitbox_area_exited"]
[connection signal="timeout" from="WateringCanHitbox/WateringCanTimer" to="." method="_on_watering_can_timer_timeout"]
[connection signal="timeout" from="MeleeHitbox/MeleeHitboxTimer" to="." method="_on_melee_hitbox_timer_timeout"]
[connection signal="timeout" from="DigHitbox/DigHitboxTimer" to="." method="_on_dig_hitbox_timer_timeout"]
